--- a/templates/index.html
+++ b/templates/index.html
@@ -48,23 +48,37 @@
           <li><a class="nav-link scrollto" href="/about">About</a></li>
           <li><a class="nav-link scrollto" href="/services">Services</a></li>
           <li><a class="nav-link scrollto " href="/gallery">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="/club">Club</a></li>
+          <li><a class="nav-link scrollto" href="/contact">Contact</a></li>
           <li class="dropdown"><a href="#"><span>Membership</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Enroll</a></li>
+              <li><a href="/join">Enroll</a></li>
               
               <li><a href="#">Exercise</a></li>
               <li><a href="#">Time</a></li>
               <li><a href="#">Profile</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="/signin">Signin</a></li>
+
+          {% if not request.user.is_authenticated %}
+
+          <li><a class="nav-link scrollto" href="/signup">Signin</a></li>
+         {% else %}
+         <li><a class="nav-link scrollto" href="/logout">Logout</a></li>
+
+
+         {% endif %}
+
+
+
+
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="/achivements" class="get-started-btn scrollto">Tennis Club</a>
-
+      {% if  request.user.is_authenticated %}
+      <a href="/" class="get-started-btn scrollto">Welcome</a>
+      {% endif %}
     </div>
   </header><!-- End Header -->
 
