--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="static/assets/img/favicon.png" rel="icon">
-  <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -45,17 +44,16 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="/">Home</a></li>
-          <li><a class="nav-link scrollto" href="/about">About</a></li>
-          <li><a class="nav-link scrollto" href="/services">Services</a></li>
-          <li><a class="nav-link scrollto " href="/gallery">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="/club">Club</a></li>
+          
           <li class="dropdown"><a href="#"><span>Membership</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="/join">Enroll</a></li>
               
-              <li><a href="#">Exercise</a></li>
-              <li><a href="#">Time</a></li>
-              <li><a href="#">Profile</a></li>
+              <li><a href="/attendance">Attendance</a></li>
+
+              
+
+              <li><a href="/profile">View Profile</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="/signup">Signin</a></li>
