--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,7 +42,7 @@ Contact Us
         </div>
         
         <div class="form-group">
-        <label for="desc" class="text-warning">How can i help you?</label>
+        <label for="desc" class="text-warning">What do you need help with?</label>
         <textarea class="form-control mt-2" name="desc" cols="5" rows="3" id="desc"></textarea>
         </div>
         
