--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="/">Miami Tennis Club<span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="/">Miami Tennis Club</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="static/assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
@@ -61,7 +61,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="/achivements" class="get-started-btn scrollto">Tennis Club</a>
+      
 
     </div>
   </header><!-- End Header -->
