--- a/templates/index.html
+++ b/templates/index.html
@@ -39,9 +39,8 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="/">Miami Tennis Club<span>.</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="static/assets/img/tennis-2557074_640.png" alt="" class="img-fluid"></a> -->
+      <h1 class="logo me-auto me-lg-0"><a href="/">Miami Tennis Club</a></h1>
+      
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -77,9 +76,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      {% if  request.user.is_authenticated %}
-      <a href="/" class="get-started-btn scrollto">Welcome</a>
-      {% endif %}
+     
     </div>
   </header><!-- End Header -->
 
@@ -89,7 +86,7 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Walcom! To Miami Tennis International Miami Association<span>.</span></h1>
+          <h1>Walcom! To Miami Tennis International Miami Association</h1>
           <h2>We are Miamis Best Tennis Club and have best Training</h2>
         </div>
       </div>
