--- a/templates/enroll.html
+++ b/templates/enroll.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} 
-{% block title %} Enrollment for Gym {% endblock title%}
+{% block title %} Enrollment for Tennis {% endblock title%}
 {% block head %}
 
-<h1>Join The Best Gym In Bangalore</h1>
+<h1>Join Miami Tennis Club</h1>
     
 
 <div class="container mt-2">
